# akson

./: Cargo.toml  README.md  example.ipynb
akson/: Cargo.toml
akson-python/: Cargo.toml  pyproject.toml
akson-python/py_src/akson/: __init__.py
akson-python/src/: lib.rs
akson/benches/: benchmark_discretize.rs
akson/html_src/: docs-header.html
akson/src/: lib.rs
examples/: dc_engine.ipynb  overview.ipynb
