[project]
name = "akson"
requires-python = ">=3.9"
authors = [
  { name = "Antoni Przybylik", email = "antoni.przybylik@wp.pl" },
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = ["control", "simulation", "math"]
dynamic = ["description", "license", "readme", "version"]
dependencies = [
	"torch==2.5.1"
]

[project.urls]
Homepage = "https://github.com/antoniprzybylik/akson"
Source = "https://github.com/antoniprzybylik/akson"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "py_src"
module-name = "akson.rust"
bindings = "pyo3"
features = ["pyo3/extension-module"]
